--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.24.1"
   }
 }
